<resources>
    <string name="app_name">myapp</string>
    <string name="navbar_in">Доходы</string>
    <string name="navbar_out">Расходы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="plus_fragment">this is plus_fragment</string>
    <string name="minus_fragment">this is minus_fragment</string>
    <string name="con_text">Конвертировать</string>
    <string name="summa">Сумма</string>
    <string name="comment">Комментарии</string>
    <string name="date">Дата</string>
    <string name="cash_text">2000</string>
    <string name="todo">TODO</string>
    <string name="add_element">Добавить</string>

    <string name="empty_plus_amount_field">Введите сумму</string>
    <string name="empty_comment_box">Добавьте комментарии</string>
    <string name="empty_dateBox">Добавьте дату</string>
    <string name="tenge">₸</string>
    <string name="dollar">$</string>

    <string name="not_enough">Не хватает средств</string>
    <string name="top_up_balance">Пополните свой счет (min: 22₸ or 0.05$)</string>
</resources>